# bdegouw.github.io

./: .nojekyll  CNAME  README.md  _quarto.yml  about.html  about.qmd  additional.html  additional.qmd  blog.html  blog.qmd  businessanalytics_foundations.html  businessanalytics_foundations.qmd  certifications.html  certifications.qmd  classes.html  classes.qmd  cloud_analytics.html  cloud_analytics.qmd  contact.html  contact.qmd  dashboard.html  dashboard.qmd  example1drop.html  example1drop.qmd  favoriteteams.html  favoriteteams.qmd  financial_analytics.html  financial_analytics.qmd  gallery.html  gallery.qmd  home.html  home.qmd  index.html  index.qmd  listings.json  marketing_analytics.html  marketing_analytics.qmd  professionalsummary.html  professionalsummary.qmd  projects.html  (+8 more)
.github/: smoke.yml
_site/: about.html  blog.html  classes.html  cloud_analytics.html  contact.html  dashboard.html  financial_analytics.html  gallery.html  index.html  listings.json  marketing_analytics.html  professionalsummary.html  robots.txt  search.json  side_projects.html  sitemap.xml
ad561_coursework/: AD561_Assignment1_BdeGouw.html  AD561_Assignment1_BdeGouw.ipynb  AD561_Assignment2_BdeGouw.html  AD561_Assignment2_BdeGouw.ipynb  AD561_Assignment3_BdeGouw.html  AD561_Assignment3_BdeGouw.ipynb  AD561_Assignment4_BdeGouw.html  AD561_Assignment4_BdeGouw.ipynb
ad571_coursework/: AD571 Assignment 1.qmd
ad654_coursework/: AD654_Assignment1_BdeGouw.html  AD654_Assignment1_BdeGouw.ipynb  AD654_Assignment2_BdeGouw.html  AD654_Assignment2_BdeGouw.ipynb  AD654_Assignment4_BdeGouw.html  (+5 more)
(+28 files in other folders)
