[project]
name = "bdegouw-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Bowen de Gouw",email = "bdegouw@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "bdegouw"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
